--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "vue-notification": "^1.3.14"
+        "vue-notification": "^1.3.14",
+        "vuedraggable": "^2.17.0"
     }
 }
